v1.14.4-snapshot
===========
Enhancements:
- #7143 Add ability to stop synergy on the login screen
- #7157 | #7160 Synergy business accepts only business licenses

Bug fixes:
- #7144 Fix double lines when pasting text from Linux to Windows

Github Actions:
- #7148 Fix unstable build for windows core
- #7156 Change binary storage server
- #7161 Use brew bundle to install dependencies
===========

v1.14.3-snapshot
===========
Bug fixes:
- #7135 Fix issue with function keys on macOS
- #7140 Configure scroll direction on a per-computer basis
- #7141 Code refactoring for the configure scroll direction task
===========

v1.14.2-stable
===========
Bug fixes:
- #7070 Fix radio button shifted focus on macOS
- #7038 | #7104 | #7111 | #7112 | #7113 Fix client and server different keyboard layout errors
- #7078 Fix clipboard re-enables automatically
- #7077 Fix Ubuntu, CentOS and Debian build after SYNERGY-1161
- #7080 Add trace if the system can't open file with trusted fingerprints
- #7081 Fix autoconfig after SYNERGY-1161
- #7082 Windows client doesn't resume connection after sleep
- #7089 | #7094 Modifier keys don't work on Microsoft Remote Desktop
- #7091 Fix CMakeFileList for unittests
- #7092 Synergy is running after quit on Linux
- #7095 Update account and upgrade links
- #7096 The system duplicates hotkeys in setup
- #7099 SYNERGY-854 Fix compilation with msvc 2014
- #7100 | #7101 No configuration available on Windows
- #7097 The title "Enterprise" disappeares after clicking on "Preferences"
- #7108 Wrong characters on client for unicode
- #7114 Fixed problem with reading languages on Linux system
- #7115 Prevent notifications if language reading fails

Enhancements:
- #7068 Add Synergy restart when settings changed
- #7072 Ability to run synergy as a pre-login agent
- #7074 Add Synergy restart when server settings changed

Github Actions:
- #1043 Adding upload to s3 feature on all OSes
- #7098 Add Apple M1 runner
- #7103 Fix core builds